--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -2,7 +2,7 @@ server {
   listen 3000;
 
   location / {
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/build;
     index index.html index.htm;
   }
 }
